--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -6,19 +6,12 @@
     restart_policy: on-failure
     restart_sec: 60
 
-- name: Wiki.js | Ensure container(s) are enabled in systemd, but stop it now because we wanted to use "recreate" in the podman_container task before this.
-  ansible.builtin.systemd:
-    name: container-wikijs
-    scope: user
-    daemon_reload: true
-    state: stopped
-    enabled: true
-
 - name: Wiki.js | Start the container(s) with systemd, so systemd will know the state of the container(s) moving forward.
   ansible.builtin.systemd:
     name: container-wikijs
     scope: user
     state: started
-  register: systemd_result
-  until: systemd_result is succeeded
-  retries: 1
+  failed_when: false
+  #register: systemd_result
+  #until: systemd_result is succeeded
+  #retries: 1
